--- a/inside_kat/kofta.html
+++ b/inside_kat/kofta.html
@@ -19,7 +19,7 @@
        
         <header>
             <div class="header-container">
-                <div class="bala-text"><a href="../../index.html">BALAPASHKA<label> SHOP</label><sup>©</sup></a></div>
+                <div class="bala-text">BALAPASHKA<label> SHOP</label><sup>©</sup></div>
                 <div class="assets">
                     <div class="phone">+7 (705) 131-59-66</div>
                         <a href="https://www.instagram.com/balapashka.shop/" target="_blank">
